Object Oriented modules, SQL database system

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -1,12 +1,9 @@
 [db]
-db_path: ./db
 db_name: database.db
+subscribers_table_name: subscribers
 
 [logging]
 log_path: ./logs
-complete_path: %(log_path)s/complete.log
-general_path: %(log_path)s/general.log
-debug_path: %(log_path)s/debug.log
 general_format: [%%(levelname)s] [%%(name)s] [%%(asctime)s]: %%(message)s
 specific_format: [%%(name)s] [%%(asctime)s]: %%(message)s
 
