Match oriented crawling system

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -2,6 +2,8 @@
 db_name: database.db
 subscribers_table_name: subscribers
 teams_table_name: teams
+date_storage_format: %%y/%%m/%%d
+time_storage_format: %%H:%%M
 
 [logging]
 log_path: ./logs
@@ -20,3 +22,6 @@ bets_url: http://www.esportenet.net
 bets_api_url: %(bets_url)s/futebolapi/api/CampJogos?
 bets_params: $filter=status eq 0 and ativo eq 1 and cancelado ne 1 and camp_ativo eq 1 and esporte_ativo eq 1 and placar_c eq null and placar_f eq null and qtd_odds gt 0 and qtd_main_odds gt 0 and (taxa_c gt 0 or taxa_f gt 0) and esporte_id eq 1 and dt_hr_ini le datetime'{0}-{1}-{2}T23:59:59'&$orderby=camp_nome,dt_hr_ini,camp_jog_id
 bet_rate_threshold: 4.0
+match_day_window: 5
+match_hour_threshold: 1
+bet_search_depth: 50
