Start bot implementation of crawler methods

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -14,6 +14,8 @@ specific_format: [%%(name)s] [%%(asctime)s]: %%(message)s
 subscription_password: batata
 token_file: token
 digest_schedule_hour: 8
+match_crawl_hour: 5
+bets_crawl_hour: 6
 
 [crawler]
 data_url: http://br.soccerway.com
@@ -27,3 +29,4 @@ match_hour_threshold: 1.0
 bet_search_depth: 50
 delta_hours: 3
 old_match_tolerance: 31104000
+bets_file_name: bets.txt
