Major database and matching algorithm revamp

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -2,6 +2,9 @@
 db_name: database.db
 subscribers_table_name: subscribers
 teams_table_name: teams
+matches_table_name: matches
+analyses_table_name: analyses
+bets_table_name: bets
 date_storage_format: %%y/%%m/%%d
 time_storage_format: %%H:%%M
 
@@ -30,3 +33,4 @@ bet_search_depth: 50
 delta_hours: 3
 old_match_tolerance: 31104000
 bets_file_name: bets.txt
+discard_matches_days: 3.0
