Starts telegram bot improvements

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -19,6 +19,7 @@ token_file: token
 digest_schedule_hour: 8
 match_crawl_hour: 5
 bets_crawl_hour: 6
+default_threshold: 6.0
 
 [crawler]
 data_url: http://br.soccerway.com
