More bot changes

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -20,6 +20,7 @@ digest_schedule_hour: 8
 match_crawl_hour: 5
 bets_crawl_hour: 6
 default_threshold: 6.0
+list_page_size: 20
 
 [crawler]
 data_url: http://br.soccerway.com
@@ -29,7 +30,7 @@ bets_api_url: %(bets_url)s/futebolapi/api/CampJogos?
 bets_params: $filter=status eq 0 and ativo eq 1 and cancelado ne 1 and camp_ativo eq 1 and esporte_ativo eq 1 and placar_c eq null and placar_f eq null and qtd_odds gt 0 and qtd_main_odds gt 0 and (taxa_c gt 0 or taxa_f gt 0) and esporte_id eq 1 and dt_hr_ini le datetime'{0}-{1}-{2}T23:59:59'&$orderby=camp_nome,dt_hr_ini,camp_jog_id
 bet_rate_threshold: 4.0
 match_day_window: 5
-match_hour_threshold: 1.0
+match_hour_threshold: 6.0
 bet_search_depth: 50
 delta_hours: 3
 old_match_tolerance: 7776000
