Bet following system. Some bug corrections.

--- a/crawl/config.ini
+++ b/crawl/config.ini
@@ -5,6 +5,7 @@ teams_table_name: teams
 matches_table_name: matches
 analyses_table_name: analyses
 bets_table_name: bets
+follows_table_name: follows
 date_storage_format: %%y/%%m/%%d
 time_storage_format: %%H:%%M
 
